force-app/main/default/objects/WOHI_Allowance__c/WOHI_Allowance__c.object-meta.xml
<CustomObject>
    <label>WOHI Allowance</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>WOHI Allowance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOHI Allowances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>