force-app/main/default/objects/WOHI_Allowance__c/fields/Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Type__c</fullName>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sustenance</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>