force-app/main/default/objects/WOHI_Allowance__c/fields/Total_Cost_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Formula__c</fullName>
    <formula>BLANKVALUE(Year1_Cost__c, 0) +
BLANKVALUE(Year2_Cost__c, 0) +
BLANKVALUE(Year3_Cost__c, 0) +
BLANKVALUE(Year4_Cost__c, 0) +
BLANKVALUE(Year5_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>