force-app/main/default/objects/WOHI_Allowance__c/fields/Year2_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year2_Cost__c</fullName>
    <label>Year2 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>